@@ -1,5 +1,13 @@
 2009-12-26  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>
 
+	Defined method name in XmlRpcMethod subclasses.
+	* src/XmlRpcMethodFactory.cc
+	* src/XmlRpcMethodImpl.cc
+	* src/XmlRpcMethodImpl.h
+	* test/XmlRpcMethodTest.cc
+
+2009-12-26  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>
+
 	Added system.multicall XML-RPC method.
 	* src/XmlRpcMethod.cc
 	* src/XmlRpcMethod.h
